agregados navBar y grid de imagenes

--- a/src/components/header/header.scss
+++ b/src/components/header/header.scss
@@ -15,13 +15,18 @@
         .navbar-list{
             font-size: 1.6rem;
             font-weight: 500;
-            color: #000
+            color: #000;
+            cursor: pointer;
+
+            .arrow{
+                margin-left: 10px;
+            }
+        
         }
         .logo{
             font-size: 3.2rem;
             font-family: 'Prata', serif;
-            color: #000;
-                     
+            color: #000;                    
             
         }
         
