Creado componente home y agregadas rutas principales

--- a/src/App.scss
+++ b/src/App.scss
@@ -3,6 +3,7 @@
 $brown: #98613A;
 $light-brown: #DFDBC7;
 $footer-icons: #36353A;
+$pink: #F0E7E1;
 
 
 
@@ -14,6 +15,7 @@ $footer-icons: #36353A;
   list-style: none;
   outline: none;
   border: none;
+  transition: .3s;
 }
 
 html{
