--- a/src/hero/hero.scss
+++ b/src/hero/hero.scss
@@ -3,9 +3,9 @@
 
 
 .grid-container{    
-    display: grid;    
+    display: grid;
     grid-template-columns: repeat(4, 1fr);
-    grid-template-rows: 280px 200px;  
+    grid-template-rows: minmax(260px, 320px) 220px;  
     
 
     .content{
@@ -16,13 +16,13 @@
         
 
         h1{
-            font-size: 3.6rem;
+            font-size: 3.8rem;
             font-family: 'Prata', serif;
             margin-bottom: 1rem;
         }
 
         p{            
-            font-size: 1.4rem;
+            font-size: 1.6rem;
             color: #98613A;
             font-weight: 600;
         }   
