agregado componente footer

--- a/src/components/footer/footer.scss
+++ b/src/components/footer/footer.scss
@@ -8,8 +8,9 @@ footer{
     gap: 2rem;
 
     p{
-        font-size: 1.2rem;
-        color: #36353A;
+        font-size: 1.4rem;
+        color: #000;
+        font-weight: 600;
     }
 
     .social-icons-container{
