--- a/src/components/hero/hero.scss
+++ b/src/components/hero/hero.scss
@@ -23,7 +23,7 @@
 
         p{            
             font-size: 1.6rem;
-            color: #98613A;
+            color: var(--color-brown);
             font-weight: 600;
         }   
         
