--- a/src/App.scss
+++ b/src/App.scss
@@ -1,10 +1,12 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;600&display=swap');
 
-$brown: #98613A;
-$light-brown: #DFDBC7;
-$footer-icons: #36353A;
-$pink: #F0E7E1;
 
+:root{
+  --color-brown: #98613A; 
+  --light-brown: #DFDBC7;
+  --footer-icons: #36353A;
+  --background-pink: #F0E7E1;
+}
 
 
 *{
@@ -29,7 +31,7 @@ html{
   width: 0.5vw;
 }
 ::-webkit-scrollbar-thumb{
-  background-color: $brown;    
+  background-color: var(--light-brown);    
 }
 ::-webkit-scrollbar-track{
   background-color: #FFF;
