--- a/src/components/footer/footer.scss
+++ b/src/components/footer/footer.scss
@@ -21,7 +21,7 @@ footer{
             font-size: 2rem;
 
             a{
-                color: #36353A;
+                color: var(--footer-icons);
             }
         }
     }
