logica de dropdown

--- a/src/components/header/header.scss
+++ b/src/components/header/header.scss
@@ -1,7 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Prata&display=swap');
 
 .header-container{    
-    height: 80px;
+    height: 70px;
     width: 100%;
     padding: 1.2rem 0;     
 
@@ -16,7 +16,8 @@
             font-weight: 500;
             color: #000;
             cursor: pointer;
-            position: relative;           
+            position: relative;
+           
 
             .arrow{
                 margin-left: 10px;
@@ -30,14 +31,20 @@
                 width: 100%;                
                 position: absolute;
                 top: 30px;
-                left: 0;                              
+                left: 0; 
+                z-index: 1000; 
+                
+                             
 
                 li{
-                    width: 100%;                   
+                    display: inline-block;
+                    width: 160px;                         
                     font-size: 1.4rem;
                     padding: 1rem 0;                    
-                    background-color: #FFF;
-                    border-bottom: 1px solid var(--footer-icons);                                   
+                    background-color: #FFF;                    
+                    border-bottom: 1px solid #333;             
+                                      
+                    
                     
                     *{
                         color: #000;
