Terminada seccion Detalle de servicios y agregado slider de imagenes

--- a/src/components/header/header.scss
+++ b/src/components/header/header.scss
@@ -2,7 +2,10 @@
 
 .header-container{    
     height: 50px;
-    width: 100%;     
+    width: 100%; 
+    
+    background-color: #FFF;
+    z-index: 1000;    
 
     nav{        
         height: 100%; 
