--- a/src/components/footer/footer.scss
+++ b/src/components/footer/footer.scss
@@ -6,7 +6,7 @@ footer{
     height: 70px;
     width: 100%;
     gap: 2rem;
-    padding-top: 3rem;
+    padding: 3rem 0;
 
     p{
         font-size: 1.4rem;
