--- a/src/pages/servicesDetails/servicesDetails.scss
+++ b/src/pages/servicesDetails/servicesDetails.scss
@@ -36,6 +36,7 @@
         .service-grid{
             display: grid;
             width: 600px;
+            padding-right: 1rem;
             grid-template-columns: 1fr 1fr;
             justify-content: center;        
             gap: 2rem;
@@ -54,6 +55,10 @@
                     background-color: #000;
                     color: #FFF;
                 }
+
+                @media (max-width:500px){
+                    font-size: 1.6rem;
+                }
     
             }
     
@@ -71,54 +76,35 @@
             margin-bottom: 1.8rem;
             text-transform: uppercase;
             font-weight: 600;
-            padding-bottom: 1rem;          
-
+            padding-bottom: 1rem;  
             
-        }
-
-
-    
-    
-    
-            
-    
-    
+        } 
         
     
         .container-photos{
             display: grid;
             text-align: center;           
             grid-template-columns:repeat(auto-fit,minmax(200px, 1fr)); 
-            gap: 1rem;
-                    
+            gap: 1rem;                   
             
     
             figure{
                 height: 280px;
                 width: 100%;
-                overflow: hidden;
-    
+                overflow: hidden;    
     
                 img{
                     height: 100%;   
                     width: 100%;             
                     object-fit: cover;
-                    cursor: pointer;
-                    
+                    cursor: pointer;                    
         
                     &:hover{
                         transform: scale(1.1);
                     }
-                }
-    
-            }
-        
-            
-        }
-    
-        
-    
-        
+                }    
+            }           
+        }       
     }
 
     .photo-wrapper{        
@@ -162,6 +148,7 @@
             font-size: 3rem;
             right: -50px;
             top: 50%;
+            cursor: pointer;
         }
 
         .arrow-left{
@@ -170,6 +157,7 @@
             font-size: 3rem;
             left: -50px;
             top: 50%;
+            cursor: pointer;
         }
     }
 }
