--- a/src/components/header/header.scss
+++ b/src/components/header/header.scss
@@ -110,18 +110,17 @@
         .lat-menu-list{
             background-color: #FFF;
             width: 100vw;
-            height: 120px;
+            height: 70px;
             position: absolute;
             top: 60px;
             right: 0;
-            z-index: 1200;
-            display: flex;
-            flex-direction: column;
-            justify-content: center;
-            align-items: center;
+            z-index: 1200;           
 
             li{
+                
                 font-size: 2rem;
+                color: #000;             
+                
             }
         }
     }
