--- a/src/pages/servicesDetails/servicesDetails.scss
+++ b/src/pages/servicesDetails/servicesDetails.scss
@@ -120,7 +120,7 @@
 
         figure{
             position: relative;
-            width: 300px;           
+            width: 400px;           
             height: 70vh;
             margin: 0 auto;
             align-self: center;            
@@ -131,6 +131,10 @@
                 object-fit: cover;
                 
             }
+
+            @media (max-width:500px){
+                width: 80%;
+            }  
         }
 
         .close-modal{
@@ -139,7 +143,11 @@
             right: -50px;
             cursor: pointer;
             color: rgb(187, 177, 177);
-            font-size: 4rem;            
+            font-size: 4rem;  
+
+            @media (max-width:500px){
+                right: -20px;
+            }          
         }       
 
         .arrow-right{
@@ -149,6 +157,10 @@
             right: -50px;
             top: 50%;
             cursor: pointer;
+
+            @media (max-width:500px){
+                right: -15px;
+            }  
         }
 
         .arrow-left{
@@ -158,6 +170,10 @@
             left: -50px;
             top: 50%;
             cursor: pointer;
+
+            @media (max-width:500px){
+                left: -15px;
+            }  
         }
     }
 }
