--- a/src/pages/servicesDetails/servicesDetails.scss
+++ b/src/pages/servicesDetails/servicesDetails.scss
@@ -35,11 +35,17 @@
     
         .service-grid{
             display: grid;
-            width: 600px;
+            max-width: 600px;
             padding-right: 1rem;
             grid-template-columns: 1fr 1fr;
             justify-content: center;        
             gap: 2rem;
+
+            @media (max-width:500px){
+                
+                margin: 0 auto;
+                grid-template-columns: 1fr;
+            }  
             
     
             li{
@@ -133,19 +139,20 @@
             }
 
             @media (max-width:500px){
-                width: 80%;
+                width: 85%;
             }  
         }
 
         .close-modal{
             position: absolute;
-            top: -25px;
+            top: -20px;
             right: -50px;
             cursor: pointer;
             color: rgb(187, 177, 177);
             font-size: 4rem;  
 
             @media (max-width:500px){
+                
                 right: -20px;
             }          
         }       
