--- a/src/components/hero/hero.scss
+++ b/src/components/hero/hero.scss
@@ -7,13 +7,36 @@
     grid-template-columns: repeat(4, 1fr);
     grid-template-rows: minmax(260px, 320px) 220px; 
     padding-top: 1rem;
-    
+    position: relative;
+
+    @media ( max-width:500px){
+        display: block;
+        min-height: 40vh;
+        display: flex;
+        
+        text-align: center;
+        background: url('https://i.postimg.cc/bJP1S9Dc/IMG-6075.jpg');
+        background-size: cover;
+        background-position:top;
+    }    
 
     .content{
         grid-column: 1/3;
         margin: 0 auto;
         align-self: center;
-        max-width: 330px;     
+        max-width: 330px; 
+        
+        @media(max-width:500px){            
+            max-width: max-content;            
+            color: #FFF; 
+            position: absolute;
+            top: 20%;
+            left: 5%;
+            text-align: left;
+            
+            
+            
+        }
         
 
         h1{
@@ -26,8 +49,11 @@
             font-size: 1.6rem;
             color: var(--color-brown);
             font-weight: 600;
-        }   
-        
+
+            @media (max-width:500px){
+                color: #FFF;
+            }
+        }       
     }
 
     img{
@@ -35,5 +61,9 @@
         height: 100%;
         object-fit: cover;
         overflow: hidden;
+
+        @media (max-width:500px){
+            display: none;
+        }
     }    
 }
