--- a/src/pages/servicios/services.scss
+++ b/src/pages/servicios/services.scss
@@ -5,11 +5,9 @@
     margin-bottom: 1rem;
 
     @media(max-width:500px){
-        height: 60vh;    
+        height: 60vh;   
         
-    }
-    
-    
+    }   
 
     figure{
         width: 100%;
@@ -23,22 +21,14 @@
         }
     }
 
-    .service-content{
-        
-        
+    .service-content{       
         position: absolute;        
         top: 30%;
         left: 5%;
 
-        @media(max-width:500px){
-            
-            left: 35%;
-            margin-right: 300px;
-            
-            
-            
-            
-            
+        @media(max-width:500px){            
+            top: 60%;
+            left: 5%;            
         }
         
 
@@ -49,7 +39,7 @@
             font-weight: 600;
             margin-bottom: 2rem;
             position: relative;
-            max-width: 200px;
+            
 
             @media(max-width:500px){
                 font-size: 2.4rem;
@@ -69,7 +59,9 @@
         h4{
             color: #FFF;
             font-size: 2rem;                       
-            margin-bottom: 2rem;           
+            margin-bottom: 2rem; 
+
+                  
         }
 
         button{
@@ -87,8 +79,8 @@
             }
 
             @media(max-width:500px){
-                padding: 1rem 2rem;
-                
+                padding: 1rem 2rem; 
+                font-size: 1.2rem;             
                 
                 
             }
@@ -100,11 +92,8 @@
         content: "";
         position: absolute;
         width: 100%;
-        height: 100%;
-        background: radial-gradient(rgba(0,0,0,.1), rgba(0,0,0,.2));
-    }
-
-    
+        height: 100%;        
+    }    
 }
 
 
