--- a/src/pages/contact/contact.scss
+++ b/src/pages/contact/contact.scss
@@ -47,7 +47,8 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    margin: 4rem 0;
+    padding: 3rem 0;
+    
 
     h2 {
         margin-bottom: 5rem;
@@ -56,13 +57,17 @@
     .inputRow {
         display: flex;
         justify-content: center;
+        gap: 2rem;
     }
 }
 
 .inputWrapper {
     display: flex;
     flex-direction: column;
-    margin: 2rem;
+    min-height: 150px;
+    
+    
+
 }
 
 .selectWrapper {
@@ -123,4 +128,19 @@ button{
     &:hover{
         transform: scale(1.1);
     }
+}
+
+.success{
+    font-size: 1.5rem;
+    color: rgb(48, 202, 48);
+     font-weight: 600;
+     margin-top: 10px;
+}
+
+.error{
+   
+    font-size: 1.5rem;
+    color: red;
+    font-weight: 600;
+    margin-top: 10px;
 }
