--- a/src/components/about/about.scss
+++ b/src/components/about/about.scss
@@ -11,16 +11,25 @@
     color: #36353A;
     margin: 3rem 0;
 
-    section {
+    .container-row {
         display: flex;
         justify-content: space-evenly;
         align-items: center;
+
+        @media (max-width:500px){
+            flex-direction: column;
+        }
 
         .sectionInfo {
             display: flex;
             flex-direction: column;
             justify-content: center;
             width: 40%;
+            padding: 2rem 1rem;
+
+            @media (max-width:500px){
+                width: 100%;
+            }
 
             h2 {
                 width: 50%;
@@ -28,15 +37,24 @@
                 font-weight: 500;
                 padding-bottom: 1rem;
                 border-bottom: 2px solid #36353A;
+               
             }
 
             p {
-                margin: 2rem 0;
+                padding: 2rem 0;
+                
             }
         }
 
-        img {
-            max-height: 550px;
+        figure{
+            width: 380px;
+            height: 500px;
+
+            img{
+                width: 100%;
+                height: 100%;
+                object-fit: cover;
+            }
         }
 
         button{
@@ -50,6 +68,13 @@
             font-size: 1.6rem;
             text-transform: uppercase;
             cursor: pointer;
+
+            @media (max-width:500px){
+                display: block;
+                margin: 0 auto;
+                width: 90%;
+                margin-bottom: 2rem;
+            }
 
             &:hover{
                 transform: scale(1.1);
