--- a/src/pages/servicios/services.scss
+++ b/src/pages/servicios/services.scss
@@ -25,9 +25,10 @@
         position: absolute;        
         top: 30%;
         left: 5%;
+        
 
         @media(max-width:500px){            
-            top: 60%;
+            top: 50%;
             left: 5%;            
         }
         
@@ -68,7 +69,7 @@
             background-color: #FFF;
             color: #000;
             font-weight: 600;
-            padding: 1rem 4.5rem;
+            width: 200px;
             border-radius: 15px;
             font-size: 1.6rem;
             text-transform: uppercase;
