--- a/src/components/about/about.scss
+++ b/src/components/about/about.scss
@@ -3,7 +3,7 @@
 .about {
     display: flex;
     flex-direction: column;
-    justify-content: space-evenly;
+    justify-content: center;
     align-items: center;
     font-size: 16px;
     font-family: 'Montserrat', sans-serif;
@@ -13,6 +13,9 @@
 
     .container-row {
         display: flex;
+        width: 100%;
+        flex-wrap: wrap;
+        flex: 1 1 30rem;
         justify-content: space-evenly;
         align-items: center;
 
@@ -24,8 +27,10 @@
             display: flex;
             flex-direction: column;
             justify-content: center;
-            width: 40%;
+            max-width: 600px;
             padding: 2rem 1rem;
+            letter-spacing: 1px;
+            line-height: 20px;
 
             @media (max-width:500px){
                 width: 100%;
@@ -46,9 +51,13 @@
             }
         }
 
+        
+
         figure{
             width: 380px;
             height: 500px;
+            background-color: var(--light-brown);
+            position: relative;
 
             @media (max-width:500px){
                 width: 70%;
@@ -60,6 +69,12 @@
                 width: 100%;
                 height: 100%;
                 object-fit: cover;
+            }
+
+            .profile-picture{
+                position: absolute;
+                top: 25px;
+                left: 25px;
             }
         }
 
