mejoras en responive

--- a/src/App.scss
+++ b/src/App.scss
@@ -3,7 +3,7 @@
 
 :root{
   --color-brown: #98613A; 
-  --light-brown: #DFDBC7;
+  --light-brown: #98613a80;
   --footer-icons: #36353A;
   --background-pink: #F0E7E1;
 }
