mejoras en seccion de about

--- a/src/App.scss
+++ b/src/App.scss
@@ -3,7 +3,7 @@
 
 :root{
   --color-brown: #98613A; 
-  --light-brown: #98613a80;
+  --light-brown: #d1cebd;
   --footer-icons: #36353A;
   --background-pink: #F0E7E1;
 }
@@ -40,4 +40,5 @@ html{
 body{
   font-family: 'Montserrat', sans-serif;
   font-size: 10px;
+  background-color: #f5f5f5;
 }
