--- a/src/components/about/about.scss
+++ b/src/components/about/about.scss
@@ -18,6 +18,7 @@
         flex-wrap: wrap;
         flex: 1 1 30rem;
         justify-content: space-evenly;
+        margin-bottom: 5rem;
         
         
         
@@ -34,6 +35,7 @@
             padding: 2rem 1rem;
             letter-spacing: 1px;
             line-height: 20px;
+            
 
             @media (max-width:600px){
                 width: 100%;
@@ -118,4 +120,134 @@
                 transform: scale(1.1);
             }
     
-} } }
+
+        } 
+    }
+
+    .servicesWrapper{
+        padding: 0 10%;
+       
+        
+        display: flex;
+        align-items: center;        
+        gap: 5rem;
+        margin-bottom: 3rem;
+
+        .left-row{
+            max-width: 700px; 
+        }
+
+        img{
+            object-fit: cover;
+            height: 600px;
+        }
+
+        .sectionInfo{
+            margin: 0 auto;
+                      
+            
+            margin-bottom: 5rem;
+            
+
+            h2{ width: 50%;               
+                font-size: 36px;
+                font-weight: 500;
+                padding-bottom: 1rem;
+                border-bottom: 2px solid #36353A;
+                padding-bottom: 15px;
+                margin-bottom: 2rem;
+            }
+
+            
+        }
+        
+        .service-grid{
+            display: grid;
+            grid-template-columns: 1fr;
+            gap: 3rem;
+            
+
+            .service{
+                display: flex;  
+                border-radius: 25px; 
+                           
+                
+                cursor: pointer;
+                background-color: #FFF;
+                box-shadow: 1px 5px 25px rgba($color: #000000, $alpha: .1);
+
+                &:hover .arrow{
+                            
+                    animation: move-arrow 2s ease-in-out infinite;
+                }
+
+                
+                
+                
+
+                .service-content{
+                    padding: 15px 10px;
+                    flex: 5;
+                }
+
+                .service-icon{
+                   
+                    
+                    
+                    display: flex;
+                    justify-content: center;
+                    align-items: center;
+                    flex: 1.2;                   
+
+
+                    .icon{
+                        font-size: 4rem;
+                        color: var(--color-brown);
+                        
+                    }
+                }
+
+                .container-arrow{
+                    display: flex;
+                    justify-content: center;
+                    align-items: center;
+                    flex: 1;
+
+                    .arrow{
+                        font-size: 2.6rem;
+
+                        
+
+                        
+                    }
+
+                    @keyframes move-arrow {
+                        10%{
+                            transform: translateX(5px);
+                        }
+                        20%{
+                            transform: translateX(-5px);
+                        }
+                        30%{
+                            transform: translateX(5px);
+                        }
+                        50%{
+                            transform: translateX(0px);
+                        }
+                        100%{
+                            transform: translate(0);
+                        }
+                        
+                    }
+                }
+                
+            }
+
+            
+            
+
+
+        }
+        
+    }
+ }
