--- a/src/components/hero/hero.scss
+++ b/src/components/hero/hero.scss
@@ -8,6 +8,7 @@
     grid-template-rows: minmax(260px, 320px) 220px; 
     padding-top: 1rem;
     position: relative;
+    background-color: #FFF;
 
     @media ( max-width:500px){
         display: block;
