--- a/src/App.scss
+++ b/src/App.scss
@@ -20,11 +20,14 @@
   transition: .3s;
 }
 
-html{
-  
+html{  
   font-size: 62.5%;
-
   
+}
+
+section{
+  padding: 0 10%;
+  overflow-x: hidden;
 }
 
 ::-webkit-scrollbar{
@@ -41,4 +44,10 @@ body{
   font-family: 'Montserrat', sans-serif;
   font-size: 10px;
   background-color: #f5f5f5;
+}
+
+@media (max-width:600px){
+  section{
+    padding: 0 2%;
+  }
 }
