--- a/src/components/about/about.scss
+++ b/src/components/about/about.scss
@@ -125,28 +125,46 @@
     }
 
     .servicesWrapper{
-        padding: 0 10%;
-       
         
+                
         display: flex;
-        align-items: center;        
+        
+        align-items: center; 
+        justify-content: space-between;
+        width: 100%;       
         gap: 5rem;
         margin-bottom: 3rem;
 
+        @media (max-width:900px) {
+            flex-direction: column;
+            
+        }
+       
+
+        
+
         .left-row{
-            max-width: 700px; 
+                     
+            
+            max-width: 800px;
+            @media (max-width:600px){
+                padding: 0 5%;   
+            }
         }
 
         img{
             object-fit: cover;
             height: 600px;
+            
+            
+            
         }
 
         .sectionInfo{
-            margin: 0 auto;
-                      
-            
+            margin: 0 auto;           
             margin-bottom: 5rem;
+
+            
             
 
             h2{ width: 50%;               
@@ -156,6 +174,8 @@
                 border-bottom: 2px solid #36353A;
                 padding-bottom: 15px;
                 margin-bottom: 2rem;
+
+                
             }
 
             
@@ -164,25 +184,25 @@
         .service-grid{
             display: grid;
             grid-template-columns: 1fr;
-            gap: 3rem;
+            gap: 3rem;        
             
 
             .service{
                 display: flex;  
-                border-radius: 25px; 
-                           
-                
+                border-radius: 25px;               
                 cursor: pointer;
                 background-color: #FFF;
                 box-shadow: 1px 5px 25px rgba($color: #000000, $alpha: .1);
 
+                @media (max-width:600px){
+                    flex-direction: column;
+                    text-align: center;
+                }
+
                 &:hover .arrow{
                             
                     animation: move-arrow 2s ease-in-out infinite;
-                }
-
-                
-                
+                }               
                 
 
                 .service-content{
@@ -212,6 +232,10 @@
                     justify-content: center;
                     align-items: center;
                     flex: 1;
+
+                    @media (max-width:600px){
+                        display: none;
+                    }
 
                     .arrow{
                         font-size: 2.6rem;
