--- a/src/components/about/about.scss
+++ b/src/components/about/about.scss
@@ -153,8 +153,15 @@
         }
 
         img{
+            display: block;
             object-fit: cover;
             height: 600px;
+
+            @media (max-width:500px){
+                height: 400px;
+                width: 90%;
+                margin: 0 auto;
+            }
             
             
             
@@ -208,15 +215,18 @@
                 .service-content{
                     padding: 15px 10px;
                     flex: 5;
+
+                    h3{
+                        margin-bottom: 15px;
+                    }
                 }
 
-                .service-icon{
-                   
-                    
+                .service-icon{                  
                     
                     display: flex;
                     justify-content: center;
                     align-items: center;
+                    padding-top: 15px;
                     flex: 1.2;                   
 
 
