--- a/src/components/about/about.scss
+++ b/src/components/about/about.scss
@@ -124,27 +124,25 @@
         } 
     }
 
-    .servicesWrapper{
-        
+    .servicesWrapper{        
                 
-        display: flex;
-        
+        display: flex;        
         align-items: center; 
         justify-content: space-between;
         width: 100%;       
         gap: 5rem;
         margin-bottom: 3rem;
+        
 
         @media (max-width:900px) {
             flex-direction: column;
             
-        }
-       
-
-        
+        }       
 
         .left-row{
-                     
+
+            letter-spacing: 1px;
+            line-height: 20px;                    
             
             max-width: 800px;
             @media (max-width:600px){
@@ -161,20 +159,17 @@
                 height: 400px;
                 width: 90%;
                 margin: 0 auto;
-            }
-            
-            
+            }    
             
         }
 
         .sectionInfo{
             margin: 0 auto;           
-            margin-bottom: 5rem;
-
-            
+            margin-bottom: 5rem;            
             
 
-            h2{ width: 50%;               
+            h2{
+                width: 50%;               
                 font-size: 36px;
                 font-weight: 500;
                 padding-bottom: 1rem;
@@ -182,6 +177,9 @@
                 padding-bottom: 15px;
                 margin-bottom: 2rem;
 
+                @media (max-width:600px){
+                    font-size: 26px;
+                }
                 
             }
 
@@ -191,12 +189,11 @@
         .service-grid{
             display: grid;
             grid-template-columns: 1fr;
-            gap: 3rem;        
-            
+            gap: 3rem;           
 
             .service{
                 display: flex;  
-                border-radius: 25px;               
+                border-radius: 20px;               
                 cursor: pointer;
                 background-color: #FFF;
                 box-shadow: 1px 5px 25px rgba($color: #000000, $alpha: .1);
@@ -215,9 +212,11 @@
                 .service-content{
                     padding: 15px 10px;
                     flex: 5;
+                    font-weight: 500;
 
                     h3{
                         margin-bottom: 15px;
+                        font-size: 2.2rem;
                     }
                 }
 
@@ -226,7 +225,7 @@
                     display: flex;
                     justify-content: center;
                     align-items: center;
-                    padding-top: 15px;
+                    padding-top: 10px;
                     flex: 1.2;                   
 
 
@@ -273,15 +272,8 @@
                         }
                         
                     }
-                }
-                
+                }                
             }
-
-            
-            
-
-
-        }
-        
+        }        
     }
  }
