--- a/src/pages/communityManager/communityManager.scss
+++ b/src/pages/communityManager/communityManager.scss
@@ -35,6 +35,7 @@
     ul {
         display: flex;
         flex-direction: row;
+        flex-wrap: wrap;
         justify-content: center;
         align-items: center;
         
@@ -54,36 +55,19 @@
 }
 
 .clientLogo {
-    height: 16rem;
+    height: 120px;
+    
+    
+}
+
+h4{
+    font-size: 2rem;
 }
 
 .cmPhotos {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
+    text-align: center;   
 
-    .client {
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-        align-items: center;
-        margin-bottom: 4rem;
-
-        ul {
-            display: flex;
-            flex-direction: row;
-
-            li {
-                margin: 0 1rem;
-
-                img{
-                    height: 400px;
-                }
-            }
-        }
-
-    }
+    
 }
 
 .screenshot{
@@ -173,8 +157,7 @@
 .beforeAfter {
     display: flex;
     flex-direction: column;
-    justify-content: center;
-   
+    justify-content: center;   
     align-items: center;
     margin: 4rem 0;
 
