--- a/src/components/slider/simpleSlider.scss
+++ b/src/components/slider/simpleSlider.scss
@@ -1,13 +1,13 @@
 .slider-container{
     display: block;
-    width: 100%;
-    margin-bottom: 2rem;
+    width: 80%;    
+    margin: 0 auto 2rem;
     
     
 
     img{
         
-        height: 400px;
+        height: 420px;
         padding: 0 10px;
         object-fit: cover;
         
