--- a/src/pages/communityManager/communityManager.scss
+++ b/src/pages/communityManager/communityManager.scss
@@ -1,10 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,200;1,300;1,400;1,500;1,600&display=swap');
 
-* {
-    font-family: 'Montserrat', sans-serif;
-    
 
-    h3 {
+    .community-title {
         font-weight: 700;
         font-size: 28px;
         margin: 2rem 0;
@@ -14,7 +11,7 @@
         text-align: center;
         padding-bottom: 15px;
     }
-
+    
     h4 {
         font-weight: 500;
         font-size: 34px;
@@ -24,7 +21,7 @@
         
        
     }
-}
+
 
 
 
@@ -34,6 +31,9 @@
     justify-content: center;
     align-items: center;
     margin: 3rem 0;
+    font-family: 'Montserrat', sans-serif;
+
+    
 
     ul {
         display: flex;
@@ -90,17 +90,21 @@ h4{
     .compareContainer {
         display: flex;        
         flex-wrap: wrap;
-        justify-content: space-between;
+        justify-content: center;
         align-items: center;
+        width: 100%;
+        gap: 3rem;
     }
 
     .compareStats {
         display: flex; 
-        flex: 1 1 30rem;       
+       
+              
         flex-direction: column;
         justify-content: center;
         align-items: center;        
         font-size: 1.5rem;
+        
         font-weight: 500;
 
         
