--- a/src/pages/communityManager/communityManager.scss
+++ b/src/pages/communityManager/communityManager.scss
@@ -77,6 +77,7 @@ h4{
 
 .screenshot{
     height: 550px;
+    margin-bottom: 2rem;
    
 }
 
@@ -85,6 +86,7 @@ h4{
     flex-direction: column;
     justify-content: space-center;
     align-items: center;
+    padding: 0 2rem;
    
 
     .compareContainer {
