--- a/src/pages/servicesDetails/servicesDetails.scss
+++ b/src/pages/servicesDetails/servicesDetails.scss
@@ -29,47 +29,46 @@
     .services-options{
         min-height: 20vh;
         display: flex;
+        flex-wrap: wrap;
+        gap: 2rem;      
         align-items: center;
-        justify-content: flex-start;
-        margin-left: 3rem;        
-    
-        .service-row{
-            display: flex;
-            flex-wrap: wrap;
-            
-            padding-right: 1rem;
-            
-            justify-content: center;        
-            gap: 2rem;
+        
+        
+        
+        @media (max-width:500px){
+            min-height: 30vh;
+            margin: 0;
+        }      
 
-            @media (max-width:500px){
-                
-                margin: 0 auto;
-                grid-template-columns: 1fr;
-            }  
+            
             
     
-            li{
+            button{
+                max-width: 300px;
                 border-radius: 25px;
-                border: 1px solid var(--color-brown);
+                border: 1px solid var(--light-brown);
                 font-size: 2rem;
                 text-transform: uppercase;
                 padding: .5rem 3rem;
                 text-align: center;
                 cursor: pointer;
-                
-                &:hover{
+
+                &:focus{
                     background-color: #000;
-                    color: #FFF;
+                    
                 }
+                
+                
+                
 
                 @media (max-width:500px){
                     font-size: 1.6rem;
                 }
     
             }
+           
     
-        }
+        
     }
     .photos-wrapper{
         
@@ -186,5 +185,10 @@
             }  
         }
     }
+}
+
+iframe{
+   
+    width: 100%;
 }
 
