--- a/src/pages/contact/contact.scss
+++ b/src/pages/contact/contact.scss
@@ -80,8 +80,6 @@
 
 }
 
-
-
 label {
     font-size: 18px;
     font-weight: 500;
@@ -92,7 +90,7 @@ input, select {
     font-family: 'Montserrat', sans-serif;
     font-weight: 500;
     color: #36353A;
-    padding: 2rem;
+    padding: 2rem 15px;
     border: #36353A solid 3px;
     border-radius: 25px;
     font-size: 16px;
