--- a/src/pages/servicesDetails/servicesDetails.scss
+++ b/src/pages/servicesDetails/servicesDetails.scss
@@ -195,8 +195,35 @@
     }
 }
 
+.film-container{
+    min-height: 100vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    max-width: 80%;
+    margin: 0 auto;
+
+    h2{
+        font-size: 26px;
+        padding-bottom: 5px;
+        border-bottom: 2px solid #000;
+        display: inline;
+        margin: 15px;
+        text-transform: uppercase;
+    }
+
+    p{
+        font-size: 16px;
+        margin-bottom: 2rem;
+    }
+}
+
 iframe{
    
+    
+   
     width: 100%;
+    
 }
 
